--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=${DB_URL}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.show-sql=true
+
+# JWT
+spring.jwt.secret=${JWT_SECRET}
